Update packages and begin to reorganize

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <title>make-sail</title>
 </head>
 <body>
-<div id="blocker">
-    <div id="notice-container">
-        <h1>Paused</h1>
-        <p>click to resume</p>
+    <div id="blocker">
+        <div id="notice-container">
+            <h1>Paused</h1>
+            <p>click to resume</p>
+        </div>
     </div>
-</div>
-<div class="flex-container">
-    <div class="flex-row">
-        <div id="game"></div>
+    <div class="flex-container">
+        <div class="flex-row">
+            <div id="game"></div>
+        </div>
+        <div id="debug"></div>
     </div>
-    <div id="debug"></div>
-</div>
 
-<script type="module" src="./src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
